--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<main>
 		<header>
 			<div class="header-con left">
-				<h1 class="welcome-heading">Welcome to our <br /> awesome site!</h1>
+				<h1 class="welcome-heading">Welcome to our <br /> awesome website!</h1>
 			</div>
 			<div class="header-con right">
 				<img src="img/macbook1.png" alt="" class="header-image">
@@ -22,19 +22,19 @@
 		<section class="team">
 			<h2 class="team-heading">Meet our team</h2>
 			<div class="column left">
-				<img src="img/minion.jpg" alt="" class="team-img">
+				<img src="img/team1.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> CEO </h5>
 			</div>
 
 			<div class="column left">
-				<img src="img/minion.jpg" alt="" class="team-img">
+				<img src="img/team2.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> CTO </h5>
 			</div>
 
 			<div class="column left">
-				<img src="img/minion.jpg" alt="" class="team-img">
+				<img src="img/team3.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> Designer </h5>
 			</div>
