--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</section>
 
 		<section class="product">
-			<h2 class="team-heading">Buy our product</h2>
+			<h2 class="team-heading">Our product</h2>
 			<div class="column left">
 				<h3 class="product-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda qui vero sapiente esse laudantium error iure architecto laborum consectetur! Odit.</h3>
 			</div>
