--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" media='screen and (max-width: 768px)' href="css/phone.css"/>
+	<link rel="stylesheet" media='screen and (min-width: 769px)' href="css/tablet.css"/>
+
 </head>
 <body>
 	<nav>
