--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
 			</form>
 		</footer>
 	</main>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </body>
 </html>
