--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" media='screen and (max-width: 768px)' href="css/phone.css"/>
 	<link rel="stylesheet" media='screen and (min-width: 769px)' href="css/tablet.css"/>
 
 </head>
 <body>
-	<nav>
-		
+	<nav class="nav">
+		<ul class="nav-list">
+			<li class="nav-list-item"><a href="" class="nav-list-anchor">Home</a></li>
+			<li class="nav-list-item"><a href="" class="nav-list-anchor">Team</a></li>
+			<li class="nav-list-item"><a href="" class="nav-list-anchor">Product</a></li>
+			<li class="nav-list-item"><a href="" class="nav-list-anchor">Contact</a></li>
+		</ul>
 	</nav>
 	<main>
 		<header>
