--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 	
 		<section class="team">
 			<h2 class="team-heading">Meet our team</h2>
-			<div class="column left">
+			<div class="column left team-con">
 				<img src="img/team1.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> CEO </h5>
 			</div>
 
-			<div class="column left">
+			<div class="column left team-con">
 				<img src="img/team2.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> CTO </h5>
 			</div>
 
-			<div class="column left">
+			<div class="column left team-con">
 				<img src="img/team3.png" alt="" class="team-img">
 				<h3 class="team-small-heading">John Doe</h3>
 				<h5 class="team-subtext"> Designer </h5>
@@ -53,15 +53,15 @@
 
 		<section class="product">
 			<h2 class="team-heading">Our product</h2>
-			<div class="column left">
+			<div class="column left product-con">
 				<h3 class="product-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda qui vero sapiente esse laudantium error iure architecto laborum consectetur! Odit.</h3>
 			</div>
 
-			<div class="column left">
+			<div class="column left product-con">
 				<img src="img/iphone.jpg" alt="" class="product-img">
 			</div>
 
-			<div class="column left">
+			<div class="column left product-con">
 				<h3 class="product-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero sapiente aut nemo ab commodi in qui reiciendis nostrum voluptatibus! Ad.</h3>
 			</div>
 		</section>
