--- a/HTML.html
+++ b/HTML.html
@@ -5,6 +5,6 @@
 	<title>HTML basics</title>
 </head>
 <body>
-	<iframe src="https://app.emaze.com/@ALFZRZFQ/html" width="960px" height="540px" seamless webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<iframe src="https://app.emaze.com/@ALFZRITW/web_dev" width="960px" height="540px" seamless webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </body>
 </html>
