add product team and footer section

--- a/20.6.2015/index.html
+++ b/20.6.2015/index.html
@@ -25,9 +25,49 @@
 				<img src="img/macbook1.png" alt="laptop" class="header-image">
 			</div>
 		</header>
-		<section class="team"> </section>
-		<section class="product"> </section>
-		<footer>  </footer>
+		<section class="team">
+			<h2 class="team-heading">Meet our team</h2>
+			<div class="left-column">
+				<img src="img/team1.png" alt="" class="team-img">
+				<h3 class="team-small-heading">John Doe</h3>
+				<h5 class="team-subtext">CEO</h5>
+			</div>
+			<div class="left-column">
+				<img src="img/team2.png" alt="" class="team-img">
+				<h3 class="team-small-heading">John Doe</h3>
+				<h5 class="team-subtext">CTO</h5>
+			</div>
+			<div class="left-column">
+				<img src="img/team3.png" alt="" class="team-img">
+				<h3 class="team-small-heading">John Doe</h3>
+				<h5 class="team-subtext">Designer</h5>
+			</div>
+		</section>
+
+		<section class="product">
+			<h2 class="team-heading">Our product</h2>
+			<div class="left-column product-con">
+				<p class="product-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci est, possimus aperiam repellat explicabo debitis, saepe soluta aliquid optio.</p>
+			</div>
+			<div class="left-column product-con">
+				<img src="img/iphone.jpg" alt="" class="product-img">
+			</div>
+			<div class="left-column product-con">
+				<p class="product-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci est, possimus aperiam repellat explicabo debitis, saepe soluta aliquid optio.</p>
+			</div>
+		</section>
+		<footer>
+			<h2 class="contact-heading">Contact us</h2>
+			<form class="footer-form">
+				<input type="text" placeholder="name" class="input-field">
+				<input type="email" placeholder="email" class="input-field">
+				<input type="text" placeholder="something else" class="input-field">
+				<input type="text" placeholder="something else" class="input-field">
+				<input type="submit" value="submit" class="btn-submit">
+			</form>
+		</footer>
 	</main>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </html>
